--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "testing-cicd-workshop",
   "version": "1.0.0",
-  "description": "CI/CD Pipeline Exercise for Testing Team",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "node app.js",
     "test": "jest",
@@ -16,5 +15,18 @@
       "*.js",
       "!node_modules/**"
     ]
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4"
   }
 }
+
+
