--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint *.js tests/*.js",
+    "lint:fix": "eslint *.js tests/*.js --fix",
     "start": "node app.js",
     "test": "jest",
     "test:unit": "jest tests/unit.test.js",
@@ -24,9 +26,12 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "audit-ci": "^7.1.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "jest": "^30.2.0",
+    "prettier": "^3.6.2",
     "supertest": "^7.1.4"
   }
 }
-
-
