--- a/package.json
+++ b/package.json
@@ -3,20 +3,32 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint *.js tests/*.js",
-    "lint:fix": "eslint *.js tests/*.js --fix",
     "start": "node app.js",
     "test": "jest",
     "test:unit": "jest tests/unit.test.js",
     "test:integration": "jest tests/integration.test.js",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": "eslint *.js tests/*.js",
+    "lint:fix": "eslint *.js tests/*.js --fix"
   },
   "jest": {
     "testEnvironment": "node",
     "collectCoverageFrom": [
       "*.js",
       "!node_modules/**"
-    ]
+    ],
+    "reporters": [
+      "default",
+      ["jest-html-reporter",{
+        "pageTitle": "Calculator API Test Report",
+        "outputPath":"test-report.html"
+      }],
+      ["jest-junit",{
+        "outputDirectory": "test-results",
+        "outputName": "junit.xml"
+      }]
+    ],
+    "coverageReporters": ["text","lcov","html"]
   },
   "keywords": [],
   "author": "",
@@ -27,11 +39,9 @@
   },
   "devDependencies": {
     "audit-ci": "^7.1.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
+    "eslint": "^8.0.0",
     "jest": "^30.2.0",
-    "prettier": "^3.6.2",
     "supertest": "^7.1.4"
   }
 }
+ 
