--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "testing-cicd-workshop",
+  "name": "pipeline",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "node app.js",
     "test": "jest",
     "test:unit": "jest tests/unit.test.js",
     "test:integration": "jest tests/integration.test.js",
     "test:coverage": "jest --coverage",
-    "lint": "eslint *.js tests/*.js",
-    "lint:fix": "eslint *.js tests/*.js --fix"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "jest": {
     "testEnvironment": "node",
@@ -19,29 +20,43 @@
     ],
     "reporters": [
       "default",
-      ["jest-html-reporter",{
-        "pageTitle": "Calculator API Test Report",
-        "outputPath":"test-report.html"
-      }],
-      ["jest-junit",{
-        "outputDirectory": "test-results",
-        "outputName": "junit.xml"
-      }]
+      [
+        "jest-html-reporter",
+        {
+          "pageTitle": "Calculate API Test Report",
+          "outputPath": "test-report.html"
+        }
+      ],
+      [
+        "jest-junit",
+        {
+          "outputDirectory": "test-results",
+          "outputName": "junit.xml"
+        }
+      ]
     ],
-    "coverageReporters": ["text","lcov","html"]
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "CI/CD Pipeline excercise for testing team",
   "dependencies": {
     "express": "^5.1.0"
   },
   "devDependencies": {
     "audit-ci": "^7.1.0",
-    "eslint": "^8.0.0",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "jest": "^30.2.0",
+    "jest-html-reporter": "^4.3.0",
+    "jest-junit": "^16.0.0",
+    "prettier": "^3.6.2",
     "supertest": "^7.1.4"
   }
 }
- 
