--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "pipeline",
+  "name": "testing-cicd-workshop",
   "version": "1.0.0",
-  "main": "app.js",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node app.js",
     "test": "jest",
     "test:unit": "jest tests/unit.test.js",
     "test:integration": "jest tests/integration.test.js",
     "test:coverage": "jest --coverage",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "eslint *.js tests/*.js",
+    "lint:fix": "eslint *.js tests/*.js --fix"
   },
   "jest": {
     "testEnvironment": "node",
@@ -23,7 +22,7 @@
       [
         "jest-html-reporter",
         {
-          "pageTitle": "Calculate API Test Report",
+          "pageTitle": "Calculator API Test Report",
           "outputPath": "test-report.html"
         }
       ],
@@ -44,19 +43,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "CI/CD Pipeline excercise for testing team",
+  "description": "",
   "dependencies": {
     "express": "^5.1.0"
   },
   "devDependencies": {
     "audit-ci": "^7.1.0",
-    "eslint": "^9.37.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
+    "eslint": "^8.0.0",
     "jest": "^30.2.0",
     "jest-html-reporter": "^4.3.0",
     "jest-junit": "^16.0.0",
-    "prettier": "^3.6.2",
     "supertest": "^7.1.4"
   }
 }
+ 
+ 
